<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_comentario"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:src="@android:drawable/ic_dialog_info" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/dialog_confirmacao_cancelar_pergunta"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNao"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_nao"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#DDD" />

        <Button
            android:id="@+id/btnSim"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_sim"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>